force-app/main/default/objects/Sale_Performance__c/Sale_Performance__c.object-meta.xml
<CustomObject>
    <label>Sale Performance</label>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>Sale Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sale Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>