force-app/main/default/objects/Sale_Performance__c/fields/Actual_Point__c.field-meta.xml
<CustomField>
    <fullName>Actual_Point__c</fullName>
    <label>Actual Point</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>