force-app/main/default/objects/Sale_Performance__c/fields/Branch_Team_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Team_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Team Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>