force-app/main/default/objects/Sale_Performance__c/fields/Customer_Point__c.field-meta.xml
<CustomField>
    <fullName>Customer_Point__c</fullName>
    <label>Customer Point</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>