force-app/main/default/objects/Sale_Performance__c/fields/Financial_Target_Point__c.field-meta.xml
<CustomField>
    <fullName>Financial_Target_Point__c</fullName>
    <label>Financial Target Point</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>