force-app/main/default/objects/Sale_Performance__c/fields/Monthly_Performance__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Performance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Monthly Performance</label>
    <length>15</length>
    <type>Text</type>
</CustomField>