force-app/main/default/objects/Sale_Performance__c/fields/Number_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Customer__c</fullName>
    <label>Number of Customer</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>