force-app/main/default/objects/Sale_Performance__c/fields/People_Point__c.field-meta.xml
<CustomField>
    <fullName>People_Point__c</fullName>
    <label>People Point</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>