force-app/main/default/objects/Sale_Performance__c/fields/Percent_Success__c.field-meta.xml
<CustomField>
    <fullName>Percent_Success__c</fullName>
    <label>%Success</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>