force-app/main/default/objects/Sale_Performance__c/fields/Rank_Bankwide__c.field-meta.xml
<CustomField>
    <fullName>Rank_Bankwide__c</fullName>
    <label>Rank Bankwide</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>