force-app/main/default/objects/Sale_Performance__c/fields/Sale_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Sale_Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale Branch Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>