force-app/main/default/objects/Sale_Performance__c/fields/Sale_Info__c.field-meta.xml
<CustomField>
    <fullName>Sale_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale</label>
    <referenceTo>Sale_Info__c</referenceTo>
    <relationshipLabel>Sale Performance</relationshipLabel>
    <relationshipName>Sale_Performance</relationshipName>
    <type>Lookup</type>
</CustomField>