force-app/main/default/objects/Sale_Performance__c/fields/Service_Actual_Point__c.field-meta.xml
<CustomField>
    <fullName>Service_Actual_Point__c</fullName>
    <label>Service Actual Point</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>