force-app/main/default/objects/Sale_Performance__c/fields/Target_Other_Point__c.field-meta.xml
<CustomField>
    <fullName>Target_Other_Point__c</fullName>
    <label>Target Other Point</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>