force-app/main/default/objects/Sale_Performance__c/fields/Target_Point__c.field-meta.xml
<CustomField>
    <fullName>Target_Point__c</fullName>
    <label>Target Point</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>