force-app/main/default/objects/Sale_Performance__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <label>Variance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>