force-app/main/default/objects/Sale_Performance__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>