force-app/main/default/objects/Sale_Performance__c/fields/Yearly_Performance__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Performance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Yearly Performance</label>
    <length>15</length>
    <type>Text</type>
</CustomField>