force-app/main/default/objects/Sale_Performance__c/validationRules/Validate_Target_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Target_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Target_Point__c = 0</errorConditionFormula>
    <errorMessage>Error: Target point cannot be zero</errorMessage>
</ValidationRule>